--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight"
+        android:theme="@style/AppTheme"
         android:name=".FinTrackerApplication">
-        <activity android:name="com.mobilschool.fintrack.ui.balance.BalanceOperationsActivity">
+        <activity android:name="com.mobilschool.fintrack.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,19 +20,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.SettingsActivity"
+            android:name=".ui.settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.mobilschool.fintrack.ui.balance.BalanceOperationsActivity">
+            android:parentActivityName="com.mobilschool.fintrack.ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mobilschool.fintrack.ui.balance.BalanceOperationsActivity" />
+                android:value="com.mobilschool.fintrack.ui.MainActivity" />
         </activity>
         <activity android:name="com.mobilschool.fintrack.ui.bills.BillsActivity"
-            android:parentActivityName="com.mobilschool.fintrack.ui.balance.BalanceOperationsActivity"
+            android:parentActivityName="com.mobilschool.fintrack.ui.MainActivity"
             android:label="@string/title_bills_activity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mobilschool.fintrack.ui.balance.BalanceOperationsActivity" />
+                android:value="com.mobilschool.fintrack.ui.MainActivity" />
         </activity>
     </application>
 
