--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,19 +4,21 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-def keystorePropertiesFile = rootProject.file("keystore.properties")
+apply plugin: 'kotlin-kapt'
+
+/*def keystorePropertiesFile = rootProject.file("keystore.properties")
 
 def keystoreProperties = new Properties()
 
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))*/
 
 android {
     signingConfigs {
         config {
-            keyAlias keystoreProperties['keyAlias']
+            /*keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
             storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
+            storePassword keystoreProperties['storePassword']*/
         }
     }
     compileSdkVersion 28
@@ -30,28 +32,42 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
+        debug{
+            minifyEnabled false
+        }
+
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
+            // signingConfig signingConfigs.config
         }
     }
 }
 
+ext {
+    appcompat_version = "1.0.0-beta01"
+    constraint_layout_version = "1.1.2"
+    vector_drawable_version = "1.0.0-alpha1"
+    moxy_version = "1.5.5"
+}
+
 dependencies {
-    def lifecycle_version = "2.0.0-beta01"
-    def appcompat_version = "1.0.0-alpha1"
-    def legacy_support_version = "1.0.0-alpha1"
-    def constraint_layout_version = "1.1.2"
-    def vector_drawable_version = "1.0.0-alpha1"
+
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Design and compat
+    implementation "com.google.android.material:material:$appcompat_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
-    implementation "androidx.vectordrawable:vectordrawable:$vector_drawable_version"
+    implementation "androidx.legacy:legacy-support-v4:$appcompat_version"
+    implementation "androidx.vectordrawable:vectordrawable:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.cardview:cardview:$appcompat_version"
+
+    //Rx
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -65,21 +81,13 @@ dependencies {
     //AnimatedPieView
     implementation 'com.github.razerdp:AnimatedPieView:1.2.4'
 
-    //Rx
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
-
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-
+    // TODO: remove dialogs library
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    compile project(path: ':fincalc')
-    implementation 'androidx.cardview:cardview:1.0.0-beta01'
-    //   implementation 'com.android.support:design:27.1.1'
+    implementation project(path: ':fincalc')
 }
