Moxy integration completed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".FinTrackerApplication">
-        <activity android:name="com.mobilschool.fintrack.ui.MainActivity">
+        <activity android:name="com.mobilschool.fintrack.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,17 +22,17 @@
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.mobilschool.fintrack.ui.MainActivity">
+            android:parentActivityName="com.mobilschool.fintrack.ui.main.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mobilschool.fintrack.ui.MainActivity" />
+                android:value="com.mobilschool.fintrack.ui.main.MainActivity" />
         </activity>
         <activity android:name="com.mobilschool.fintrack.ui.bills.BillsActivity"
-            android:parentActivityName="com.mobilschool.fintrack.ui.MainActivity"
+            android:parentActivityName="com.mobilschool.fintrack.ui.main.MainActivity"
             android:label="@string/title_bills_activity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mobilschool.fintrack.ui.MainActivity" />
+                android:value="com.mobilschool.fintrack.ui.main.MainActivity" />
         </activity>
     </application>
 
