--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ ext {
     constraint_layout_version = "1.1.2"
     vector_drawable_version = "1.0.0-alpha1"
     moxy_version = "1.5.5"
+    cicerone_version = "3.0.0"
+    dagger_version = "2.16"
 }
 
 dependencies {
@@ -64,6 +66,19 @@ dependencies {
     implementation "androidx.vectordrawable:vectordrawable:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation "androidx.cardview:cardview:$appcompat_version"
+
+    // Moxy
+    implementation "com.arello-mobile:moxy:$moxy_version"
+    kapt "com.arello-mobile:moxy-compiler:$moxy_version"
+
+    //
+    implementation "ru.terrakok.cicerone:cicerone:$cicerone_version"
+
+    // Dagger
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
 
     //Rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
