--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
     buildTypes {
         debug{
@@ -52,6 +57,7 @@ ext {
     cicerone_version = "3.0.0"
     dagger_version = "2.16"
     room_version = "2.0.0-beta01"
+    nav_version = "1.0.0-alpha04"
 }
 
 dependencies {
@@ -76,9 +82,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
 
-
-    // Cicerone
-    implementation "ru.terrakok.cicerone:cicerone:$cicerone_version"
+    // Navigation
+    implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
 
     // Dagger
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
