--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ ext {
     cicerone_version = "3.0.0"
     dagger_version = "2.16"
     room_version = "2.0.0-beta01"
+    lifecycle_version = "1.1.1"
     nav_version = "1.0.0-alpha04"
 }
 
@@ -80,7 +81,9 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // LiveData
+    implementation "android.arch.lifecycle:livedata:$lifecycle_version"
 
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
@@ -92,14 +95,9 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
 
-    //Rx
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
-
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     //MPAndroidChart
@@ -115,10 +113,17 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     testImplementation "androidx.room:room-testing:$room_version"
     implementation project(path: ':fincalc')
+}
+
+kotlin{
+    experimental{
+        coroutines 'enable'
+    }
 }
