--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".FinTrackerApplication">
-        <activity android:name="com.mobilschool.fintrack.ui.main.MainActivity">
+        <activity android:name="com.mobilschool.fintrack.ui.main.MainActivity"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
