--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,7 +118,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     testImplementation "androidx.room:room-testing:$room_version"
-    implementation project(path: ':fincalc')
+    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    testImplementation 'org.mockito:mockito-core:2.19.0'
 }
 
 kotlin{
