--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         }
     }
     buildTypes {
-        debug{
+        debug {
             minifyEnabled false
         }
 
@@ -63,6 +63,9 @@ dependencies {
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     // Navigation
@@ -107,8 +110,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.19.0'
 }
 
-kotlin{
-    experimental{
+kotlin {
+    experimental {
         coroutines 'enable'
     }
 }
