Res changes, proguard

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
             }
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+    }
     buildTypes {
         debug {
             minifyEnabled false
@@ -39,7 +42,6 @@ android {
 ext {
     appcompat_version = "1.0.0-beta01"
     constraint_layout_version = "1.1.2"
-    vector_drawable_version = "1.0.0-alpha1"
     moxy_version = "1.5.5"
     cicerone_version = "3.0.0"
     dagger_version = "2.16"
@@ -60,12 +62,11 @@ dependencies {
     implementation "androidx.vectordrawable:vectordrawable:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation "androidx.cardview:cardview:$appcompat_version"
+    implementation "androidx.recyclerview:recyclerview:$appcompat_version"
+    implementation "com.google.android.material:material:$appcompat_version"
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
-    implementation 'com.google.android.material:material:1.0.0-alpha1'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     // Navigation
@@ -101,6 +102,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     testImplementation "androidx.room:room-testing:$room_version"
     testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
     androidTestImplementation "androidx.arch.core:core-testing:$lifecycle_version"
